--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,43 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+
+    /* ExoPlayer */
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.6'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.18.6'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.6'
+
+    //implementation "androidx.media3:media3-exoplayer:1.0.1"
+    //implementation "androidx.media3:media3-exoplayer-dash:1.0.1"
+    //implementation "androidx.media3:media3-ui:1.0.1"
+
+    //youtube player
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
+
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.6.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:2.6.1"
+    // Annotation processor
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.6.1"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.4'
+
+    //shimmer animation
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
