--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.STube"
         tools:targetApi="31" >
         <activity
-            android:name=".ui.activities.PlayerActivity"
+            android:name=".ui.activities.playerActivity.PlayerActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activities.MainActivity.MainActivity"
